src/test/deca/codegen/valid/avecObjet/selection_on_var_object.deca
// Description :
//    Sélection et affichage d'un champ d'objet via une variable de type classe.
//
// Resultats :
//    8
class A {
    int x;
}

{
    A a = new A();
    a.x = 8;
    println(a.x);
}

