src/test/deca/codegen/invalid/sansObjet/initialisation.deca
// Description :
//    Lecture et affichage d'une variable locale non initialisée.
//
// Resultats :
//    Erreur d'exécution : registre utilisé non défini.

{
    int x;
    println(x);
}
